--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -5,5 +5,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Profile</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <div class="left-head">
+          <img src="./img/logo.svg">
+        </div>
+        <div class="right-head">
+          <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#bicycle">Bicycle</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
