--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -9,7 +9,9 @@
     <header>
       <div class="container">
         <div class="left-head">
-          <img src="./img/logo.svg">
+          <a href="#">
+            <img src="./img/logo.svg">
+          </a>
         </div>
         <div class="right-head">
           <ul>
