[Add]About/HTML

--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -22,5 +22,17 @@
       </div>
     </header>
     <div class="main-visual"></div>
+    <div class="about">
+      <div class="container">
+        <h1>About</h1>
+        <div class="main-content">
+          <img src="./img/about.jpg" class="about-image">
+          <h5>KAKERU MIYAICHI</h5>
+          <p>テキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキストテキストテキスト</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
