[Add]クラス名変更

--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -22,15 +22,17 @@
       </div>
     </header>
     <div class="main-visual"></div>
-    <div class="about">
+    <div id="about">
       <div class="container">
         <h1>About</h1>
-        <div class="main-content">
+        <div class="content">
           <img src="./img/about.jpg" class="about-image">
-          <h5>KAKERU MIYAICHI</h5>
-          <p>テキストテキストテキストテキストテキストテキストテキスト
-            テキストテキストテキストテキストテキストテキストテキスト
-            テキストテキストテキストテキストテキストテキストテキスト</p>
+          <div class="about-prof">
+            <h5>KAKERU MIYAICHI</h5>
+            <p>テキストテキストテキストテキストテキストテキストテキスト
+              テキストテキストテキストテキストテキストテキストテキスト
+              テキストテキストテキストテキストテキストテキストテキスト</p>
+          </div>
         </div>
       </div>
     </div>
