--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -36,5 +36,27 @@
         </div>
       </div>
     </div>
+    <div id="bicycle">
+      <div class="container">
+        <h1>Bicycle</h1>
+        <div class="bi-contents">
+          <div class="bi-content">
+            <img src="./img/bicycle1.jpg">
+            <h3>タイトルタイトル</h3>
+            <p>テキストテキストテキスト</p>
+          </div>
+          <div class="bi-content">
+            <img src="./img/bicycle2.jpg">
+            <h3>タイトルタイトル</h3>
+            <p>テキストテキストテキスト</p>
+          </div>
+          <div class="bi-content">
+            <img src="./img/bicycle3.jpg">
+            <h3>タイトルタイトル</h3>
+            <p>テキストテキストテキスト</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
