--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -58,5 +58,11 @@
         </div>
       </div>
     </div>
+    
+    <footer>
+      <div class="container">
+        <p>© 2020 Profile</p>
+      </div>
+    </footer>
   </body>
 </html>
