[Add]ディスクリプション&リセットCSSの設定

--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Profile</title>
+    <meta name="description" content="テキストテキストテキスト">
+    <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/favicon.ico">
-    <title>Profile</title>
   </head>
   <body>
     <header>
