[Fix]コード修正

--- a/Cs_LP_profile/index.html
+++ b/Cs_LP_profile/index.html
@@ -9,23 +9,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./img/favicon.ico">
   </head>
+
   <body>
     <header>
       <div class="container">
         <div class="left-head">
-          <a href="#">
+          <a href="index.html">
             <img src="./img/logo.svg">
           </a>
         </div>
         <div class="right-head">
-          <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#bicycle">Bicycle</a></li>
-          </ul>
+          <nav>
+            <ul>
+              <li><a href="#about">About</a></li>
+              <li><a href="#bicycle">Bicycle</a></li>
+            </ul>
+          </nav>
         </div>
       </div>
     </header>
+
     <div class="main-visual"></div>
+
     <div id="about">
       <div class="container">
         <h1>About</h1>
@@ -40,6 +45,7 @@
         </div>
       </div>
     </div>
+
     <div id="bicycle">
       <div class="container">
         <h1>Bicycle</h1>
