--- a/Cs_LP_photosite/index.html
+++ b/Cs_LP_photosite/index.html
@@ -9,5 +9,11 @@
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="main">
+        <img src="./img (1)/logo.svg" class="head-logo">
+      </div>
+    </header>
+  </body>
 </html>
