--- a/Cs_LP_photosite/index.html
+++ b/Cs_LP_photosite/index.html
@@ -5,15 +5,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>PHOTO BOOK</title>
     <meta name="description" content="テキスト">
-    <link rel="apple-touch-icon" href="./img (1)/favicon.ico">
+    <link rel="apple-touch-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <header>
+    <div class="container">
+      <header>
+        <img src="./img/logo.svg" class="head-logo">
+      </header>
+
       <div class="main">
-        <img src="./img (1)/logo.svg" class="head-logo">
+        <div class="main-visual">
+          <img src="./img/mainvisual.jpg" alt="メインビジュアル">
+        </div>
       </div>
-    </header>
+    </div>
   </body>
 </html>
