--- a/Cs_LP_photosite/index.html
+++ b/Cs_LP_photosite/index.html
@@ -19,6 +19,18 @@
         <div class="main-visual">
           <img src="./img/mainvisual.jpg" alt="メインビジュアル">
         </div>
+        <div class="index">
+          <div class="content">
+            <h3>INDEX</h3>
+            <ol>
+              <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+              <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+              <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+              <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+              <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+            </ol>
+          </div>
+        </div>
       </div>
     </div>
   </body>
