--- a/Cs_LP_photosite/index.html
+++ b/Cs_LP_photosite/index.html
@@ -19,7 +19,7 @@
         <div class="main-visual">
           <img src="./img/mainvisual.jpg" alt="メインビジュアル">
         </div>
-        <div class="index">
+        <div class="section index">
           <div class="content">
             <h3>INDEX</h3>
             <ol>
@@ -29,6 +29,28 @@
               <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
               <li>タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
             </ol>
+          </div>
+        </div>
+        <div class="section detail">
+          <div class="content">
+            <h3>DETAIL</h3>
+            <div class="book">
+              <div class="book-left">
+                <img src="./img/detail.jpg" class="book-image">
+              </div>
+              <div class="book-right">
+                <h3 class="book-title">タイトルタイトルタイトル</h3>
+                <div class="book-info">
+                  <p>
+                    著者　　　タイトルタイトルタイトル<br>
+                    出版社　　タイトルタイトルタイトル<br>
+                    発行年　　タイトルタイトルタイトル
+                  </p>
+                </div>
+                <p class="book-text">テキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
+                <a href="index.html" class="book-link">オンラインストアで見る</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
