--- a/Cs_LP_photosite/index.html
+++ b/Cs_LP_photosite/index.html
@@ -16,7 +16,7 @@
       </header>
 
       <div class="main">
-        <div class="main-visual">
+        <div class="section main-visual">
           <img src="./img/mainvisual.jpg" alt="メインビジュアル">
         </div>
         <div class="section index">
@@ -54,6 +54,12 @@
           </div>
         </div>
       </div>
+
+      <footer>
+        <div class="content">
+          <p>&copy; 2020 PHOTO BOOK</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
