--- a/Cs_LP_recipe-top/index.html
+++ b/Cs_LP_recipe-top/index.html
@@ -10,4 +10,11 @@
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./css/style.css">
   </head>
+  <body>
+    <main>
+      <div class="main-visual">
+        <img src="./img/mainvisual.jpg">
+      </div>
+    </main>
+  </body>
 </html>
