[Add]サイトタイトルと説明文を追加

--- a/Cs_LP_recipe-top/index.html
+++ b/Cs_LP_recipe-top/index.html
@@ -15,6 +15,14 @@
       <div class="main-visual">
         <img src="./img/mainvisual.jpg">
       </div>
+      <div class="text">
+        <h1 class="title">Recipe Diary</h1>
+        <p class="description">
+          日々の料理レシピをまとめています。<br>
+          和食や洋食、中華、お菓子までいろいろな料理レシピをアップしていますので、<br>
+          みなさんの献立にお役立てくださいね！
+        </p>
+      </div>
     </main>
   </body>
 </html>
