--- a/Cs_LP_recipe-top/index.html
+++ b/Cs_LP_recipe-top/index.html
@@ -31,6 +31,14 @@
       <div class="btn">
         <a href="./index.html">レシピ一覧を見る</a>
       </div>
+      <footer>
+        <ul class="sns">
+          <li><a href="./index.html">Instagram</a></li>
+          <li><a href="./index.html">Twitter</a></li>
+          <li><a href="./index.html">Facebook</a></li>
+        </ul>
+        <p>&copy; 2021 Recipe Diary</p>
+      </footer>
     </main>
   </body>
 </html>
