--- a/Cs_LP_recipe-cookery/index.html
+++ b/Cs_LP_recipe-cookery/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Recipe Diary</title>
     <meta name="description" content="テキストテキスト">
-    <link rel="icon" href="../Cs_LP_recipe-top/img/favicon.ico">
-    <link rel="apple-touch-icon" href="../Cs_LP_recipe-top/img/favicon.ico">
+    <link rel="icon" href="./img/favicon.ico">
+    <link rel="apple-touch-icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./css/style.css">
   </head>
