[Add]メイン部分html

--- a/Cs_LP_recipe-cookery/index.html
+++ b/Cs_LP_recipe-cookery/index.html
@@ -10,5 +10,50 @@
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <main>
+        <img src="./img/recipe.jpg">
+        <div class="text">
+          <h1>ひよこ豆とアボカドのタコス</h1>
+          <p>たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少しライムを絞ったらおいしいタコスのできあがりです。</p>
+          <section>
+            <h3>材料（2人分）</h3>
+            <ul>
+              <li>
+                <p class="food">テキストテキスト</p>
+                <p class="amount">1個</p>
+              </li>
+              <li>
+                <p class="food">テキストテキスト</p>
+                <p class="amount">1個</p>
+              </li>
+              <li>
+                <p class="food">テキストテキスト</p>
+                <p class="amount">1個</p>
+              </li>
+              <li>
+                <p class="food">テキストテキスト</p>
+                <p class="amount">1個</p>
+              </li>
+              <li>
+                <p class="food">テキストテキスト</p>
+                <p class="amount">1個</p>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3>作り方</h3>
+            <ol>
+              <li>テキストテキスト</li>
+              <li>テキストテキスト</li>
+              <li>テキストテキスト</li>
+              <li>テキストテキスト</li>
+              <li>テキストテキスト</li>
+            </ol>
+          </section>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
