[Add]メイン部分

--- a/Cs_LP_recipe-cookery/index.html
+++ b/Cs_LP_recipe-cookery/index.html
@@ -13,43 +13,47 @@
   <body>
     <div class="container">
       <main>
-        <img src="./img/recipe.jpg">
-        <div class="text">
-          <h1>ひよこ豆とアボカドのタコス</h1>
-          <p>たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少しライムを絞ったらおいしいタコスのできあがりです。</p>
+        <div class="image">
+          <img src="./img/recipe.jpg">
+        </div>
+        <div class="recipe">
           <section>
+            <h1 class="title">ひよこ豆とアボカドのタコス</h1>
+            <p>たっぷりのひよこ豆とレンズ豆にアボガドとトマトを添えて、少しライムを絞ったらおいしいタコスのできあがりです。</p>
+          </section>
+          <section class="materials">
             <h3>材料（2人分）</h3>
             <ul>
-              <li>
+              <li class="material">
                 <p class="food">テキストテキスト</p>
                 <p class="amount">1個</p>
               </li>
-              <li>
+              <li class="material">
                 <p class="food">テキストテキスト</p>
                 <p class="amount">1個</p>
               </li>
-              <li>
+              <li class="material">
                 <p class="food">テキストテキスト</p>
                 <p class="amount">1個</p>
               </li>
-              <li>
+              <li class="material">
                 <p class="food">テキストテキスト</p>
                 <p class="amount">1個</p>
               </li>
-              <li>
+              <li class="material">
                 <p class="food">テキストテキスト</p>
                 <p class="amount">1個</p>
               </li>
             </ul>
           </section>
-          <section>
+          <section class="step">
             <h3>作り方</h3>
             <ol>
-              <li>テキストテキスト</li>
-              <li>テキストテキスト</li>
-              <li>テキストテキスト</li>
-              <li>テキストテキスト</li>
-              <li>テキストテキスト</li>
+              <li class="st">テキストテキストテキストテキスト</li>
+              <li class="st">テキストテキストテキストテキスト</li>
+              <li class="st">テキストテキストテキストテキスト</li>
+              <li class="st">テキストテキストテキストテキスト</li>
+              <li class="st">テキストテキストテキストテキスト</li>
             </ol>
           </section>
         </div>
