[Add]一覧ボタン&フッター

--- a/Cs_LP_recipe-cookery/index.html
+++ b/Cs_LP_recipe-cookery/index.html
@@ -58,6 +58,17 @@
           </section>
         </div>
       </main>
+      <div class="btn">
+        <a href="./index.html">レシピ一覧を見る</a>
+      </div>
+      <footer>
+        <ul class="sns">
+          <li><a href="./index.html">Instagram</a></li>
+          <li><a href="./index.html">Twitter</a></li>
+          <li><a href="./index.html">Facebook</a></li>
+        </ul>
+        <p>&copy; 2021 Recipe Diary</p>
+      </footer>
     </div>
   </body>
 </html>
