--- a/Cs_LP_recipe-top/index.html
+++ b/Cs_LP_recipe-top/index.html
@@ -29,7 +29,7 @@
         <img src="./img/recipe3.jpg" class="recipe-img">
       </div>
       <div class="btn">
-        <a href="./index.html">レシピ一覧を見る</a>
+        <a href="../Cs_LP_recipe-cookery/index.html">レシピ一覧を見る</a>
       </div>
       <footer>
         <ul class="sns">
