--- a/Cs_LP_brand/index.html
+++ b/Cs_LP_brand/index.html
@@ -10,5 +10,9 @@
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body></body>
+  <body>
+    <div class="main-visual">
+      <img src="./img/mainvisual.jpg">
+    </div>
+  </body>
 </html>
