--- a/Cs_LP_brand/index.html
+++ b/Cs_LP_brand/index.html
@@ -14,5 +14,17 @@
     <div class="main-visual">
       <img src="./img/mainvisual.jpg">
     </div>
+    <header>
+      <div class="header-logo">
+        <a href="index.html"><img src="./img/logo.svg"></a>
+      </div>
+      <nav class="header-nav">
+        <ul class="nav-list">
+          <li><a href="#concept">Concept</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="mailto:practice@xxxx.com?subject=お問い合わせ">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
