[Add]コンセプト

--- a/Cs_LP_brand/index.html
+++ b/Cs_LP_brand/index.html
@@ -26,5 +26,23 @@
         </ul>
       </nav>
     </header>
+    <div class="container">
+      <main>
+        <section id="concept">
+          <div class="con-leght">
+            <img src="./img/concept.jpg">
+          </div>
+          <div class="con-right">
+            <h1 class="section-title">私たちの考えるジュエリーとは</h1>
+            <p class="section-title-en">Concept</p>
+            <p class="section-text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+        </section>
+        <section id="work"></section>
+      </main>
+    </div>
   </body>
 </html>
