--- a/Cs_LP_brand/index.html
+++ b/Cs_LP_brand/index.html
@@ -41,7 +41,19 @@
             </p>
           </div>
         </section>
-        <section id="work"></section>
+        <section id="work">
+          <div class="work-leght">
+            <h1 class="section-title">ハンドメイドにこだわる理由</h1>
+            <p class="section-title-en">Work</p>
+            <p class="section-text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="work-right">
+            <img src="./img/work.jpg">
+          </div>
+        </section>
       </main>
     </div>
   </body>
