--- a/Cs_LP_brand/index.html
+++ b/Cs_LP_brand/index.html
@@ -15,7 +15,7 @@
       <img src="./img/mainvisual.jpg">
     </div>
     <header>
-      <div class="header-logo">
+      <div class="logo">
         <a href="index.html"><img src="./img/logo.svg"></a>
       </div>
       <nav class="header-nav">
@@ -56,5 +56,13 @@
         </section>
       </main>
     </div>
+    <footer>
+      <div class="logo">
+        <img src="./img/logo.svg">
+      </div>
+      <p>
+        &copy; 2021 Wooden Jewelry
+      </p>
+    </footer>
   </body>
 </html>
