--- a/Cs_LP_portfolio/index.html
+++ b/Cs_LP_portfolio/index.html
@@ -10,5 +10,32 @@
     <link rel="stylesheet" href="https://csstools.github.io/sanitize.css/">
     <link rel="stylesheet" href="./css/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="container">
+      <h1 class="logo">
+        <img src="./img/logo.svg">
+      </h1>
+      <nav class="head-nav">
+        <ul class="nav-list">
+          <li>
+            <a href="#about">About</a>
+          </li>
+          <li>
+            <a href="#works">Work</a>
+          </li>
+          <li>
+            <a href="#news">News</a>
+          </li>
+          <li>
+            <a href="#contact">Contact</a>
+          </li>
+          <li class="sns">
+            <a href="https://www.instagram.com/">
+              <img src="./img/icon-instagram.png">
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+  </body>
 </html>
