[Add]メインビジュアル

--- a/Cs_LP_portfolio/index.html
+++ b/Cs_LP_portfolio/index.html
@@ -37,5 +37,10 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <div class="main-visual">
+        <img src="./img/mainvisual-pc.jpg">
+      </div>
+    </main>
   </body>
 </html>
