[Add]フッター＆送信ボタン

--- a/Cs_LP_portfolio/index.html
+++ b/Cs_LP_portfolio/index.html
@@ -137,8 +137,12 @@
               <textarea></textarea>
             </dd>
           </dl>
+          <div class="btn">送信</div>
         </section>
       </div>
     </main>
+    <footer>
+      <p>&copy; 2020 My Work</p>
+    </footer>
   </body>
 </html>
